src/styles/global.css
/* ===================== TEXT STYLING ======================*/
body {
  font-family: "Cabin", sans-serif;
  font-size: 18px;
  color: 18191a;
  margin: 0;
  padding: 0;
  padding-top: 60px;
}

p {
  line-height: 200%;
}

/* HEADINGS */

h1,
h2 {
  font-family: "Oswald", sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  margin: 0;
  margin-bottom: 20px;
}

h1 {
  font-size: 4rem;
}

h2 {
  font-size: 3.5rem;
}

h3,
h4 {
  font-family: "Cabin", sans-serif;
  margin: 20px 0;
  font-weight: 500;
}

h3 {
  font-size: 2rem;
}

h4 {
  font-size: 1.5rem;
}

/* HIGHLIGHTS */

h1 .highlight.blue {
  box-shadow: inset 0 -10px 0 0 white, inset 0 -40px 0 0 #66cfe7;
}

h1 .highlight.green {
  box-shadow: inset 0 -10px 0 0 white, inset 0 -40px 0 0 green;
}

h1 .highlight.orange {
  box-shadow: inset 0 -10px 0 0 white, inset 0 -40px 0 0 #ff5c00;
}

h2 .highlight.blue {
  box-shadow: inset 0 -5px 0 0 white, inset 0 -25px 0 0 #66cfe7;
}

h2 .highlight.green {
  box-shadow: inset 0 -5px 0 0 white, inset 0 -25px 0 0 green;
}

h2 .highlight.orange {
  box-shadow: inset 0 -5px 0 0 white, inset 0 -25px 0 0 #ff5c00;
}

h3 .highlight.blue,
h4 .highlight.blue {
  box-shadow: inset 0 0px 0 0 white, inset 0 -15px 0 0 #66cfe7;
}

h3 .highlight.green,
h4 .highlight.green {
  box-shadow: inset 0 0px 0 0 white, inset 0 -15px 0 0 green;
}

h3 .highlight.orange,
h4 .highlight.orange {
  box-shadow: inset 0 0px 0 0 white, inset 0 -15px 0 0 #ff5c00;
}

/*================== STRUCTURE COMPONENTS ======================== */
/* Main page structure */

section {
  width: 90%;
  margin: auto;
  margin-bottom: 5vh;
  padding: 30px 0;
}

/* Secondary page segment */

.middle-segment {
  position: relative;
  background-color: #b9ffff50;
}

/* Images */

img {
  width: 100%;
  border-radius: 30px;
}

img.graph {
  border-radius: 0;
}

img.full-height {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  height: 100%;
  transform: translate(-50%, -50%);
  width: auto;
}

.long-image-container {
  position: relative;
  overflow: hidden;
  height: 100%;
  border-radius: 30px;
}

/* Bubbles */

.bubble img {
  width: 10%;
  border: 5px solid white;
  border-radius: 100%;
  padding: 10px;
  background-color: #110077;
  display: none;
}

.bubble {
  background-color: #110077;
  border-radius: 30px;
  padding: 10px 70px;
  color: white;
  box-sizing: border-box;
  margin: 10px;
}

.bubble-icon {
  border-radius: 100%;
  border: 5px solid white;
  background-color: #110077;
}

footer {
  width: 90%;
  margin: auto;
}

@media only screen and (min-width: 992px) {
  .two-column-section {
    display: flex;
    justify-content: space-between;
  }

  .two-column-section.reversed {
    flex-direction: row-reverse;
    justify-content: space-between;
  }
  .column {
    flex-basis: 45%;
    margin: 0% 0%;
  }

  .third-column {
    flex-basis: 30%;
    margin: 0% 0%;
  }
}

/* Heading floats */
@media only screen and (min-width: 992px) {
  .right-side {
    width: 100%;
    display: flex;
    justify-content: flex-end;
  }
  .right-side h2 {
    display: block;
    max-width: 600px;
    text-align: right;
  }
}

/* Diagonal headings */

@media only screen and (min-width: 992px) {
  .diagonal-box {
    display: flex;
    flex-direction: column;
  }
  .diagonal-box :nth-child(1) {
    align-self: flex-start;
  }
  .diagonal-box :nth-child(2) {
    align-self: center;
  }
  .diagonal-box :nth-child(3) {
    align-self: flex-end;
  }
}

/* ===================== INTERACTIVE COMPONENTS ==================== */

/* Primary link */

.primary-link,
button {
  display: block;
  width: 40%;
  margin: auto;
  text-align: center;
  background-color: #ff5c00;
  box-shadow: 5px 5px #ff5c00bb, 10px 10px #ff5c0050;
  color: white;
  padding: 12px;
  text-decoration: none;
  box-sizing: border-box;
  margin-bottom: 20px;
}

.primary-link:hover {
  text-decoration: underline;
}

@media only screen and (min-width: 992px) {
  .primary-link,
  button {
    display: inline-block;
    width: auto;
    margin-right: 50px;
  }
  .primary-link.right {
    float: right;
    margin-right: 0;
  }
}

.switcheroo,
.switcheroo-two {
  padding: 0;
  margin: 0;
  position: relative;
}

/* ============================= NAVBAR =================== */
.site-nav {
  position: fixed;
  background-color: #fff;
  top: 0;
  width: 100%;
  z-index: 100;
}

.nav-topper {
  display: flex;
  align-items: center;
  justify-content: center;
}

.menu {
  display: none;
}

.menu-toggle {
  position: absolute;
  right: 10px;
  font-size: 3em;
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  cursor: pointer;
  outline: inherit;
}

.logo {
  padding: 0;
  font-size: 1.5rem;
  margin: 0 !important;
  padding: 0;
  float: right;
}

.logo img {
  height: 30px;
  width: initial;
  border-radius: 0;
  fill: red;
  display: inline;
}

ul.menu {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.site-nav a {
  color: black;
  text-decoration: none;
  display: block;
  text-align: center;
  margin: auto;
  padding: 10px 0;
}

.mobile-menu li {
  width: 90%;
  margin: auto;
  margin-top: 0;
  margin-bottom: 0;
  box-sizing: border-box;
  /* border-bottom: 1px solid #18191a; */
}

/* .mobile-menu li:nth-child(1) {
  border-top: 1px solid #18191a;
} */

.mobile-menu .active {
  box-shadow: inset 20px 0 0 0 white, inset 40px 0 0 0 #66cfe7;
}

/* Tablet and above */
@media only screen and (min-width: 992px) {
  .nav-container {
    border-bottom: 2px solid black;
    height: 50px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 50px;
    margin: auto;
    width: 90%;
  }

  .menu-toggle,
  .mobile-menu {
    display: none !important;
  }
  .desktop-menu {
    display: block !important;
  }

  .site-nav .active {
    box-shadow: inset 0 -10px 0 0 #66cfe7;
  }
  .site-nav li {
    font-size: 1.5rem;
    float: left;
    margin-left: 90px;
  }

  .site-nav a {
    padding: 0;
  }
  .site-nav a:hover {
    box-sizing: content-box;
    box-shadow: inset 0 -10px 0 0 #ff5c00;
    color: black;
  }

  /* .site-nav .active {
    border-bottom: 8px solid #ff5c00;
    background: none;
    color: black;
  } */
}

/* ==================== FOOTER =========================== */
footer {
  width: 100%;
  text-align: center;
  background: #18191a;
  color: white;
  padding: 12px;
  box-sizing: border-box;
}

#sm-links {
  margin: auto;
  display: flex;
  width: 50%;
  justify-content: center;
}

.sm-link {
  display: block;
  width: 60px;
  margin: 5px;
}

@media screen and (min-width: 992px) {
  .shadow-box-inner {
    box-shadow: 10px 10px 10px grey;
    padding-right: 60px;
  }
}

/* ============================ SHADOW BOX IMAGE TEMPLATE ==================== */

@media only screen and (min-width: 992px) {
  .shadow-box {
    position: relative;
  }
  .shadow-box-inner {
    max-width: 75%;
  }

  .shadow-box-text {
    padding: 0 30px 30px 30px;
    max-width: 70%;
  }
  img.aside {
    object-fit: cover;
    width: 40%;
    height: 75%;
    position: absolute;
    top: 15%;
    right: 0%;
  }
}

/* ================== FRONT PAGE ================= */

@media only screen and (min-width: 992px) {
  #front-page-3 {
    max-width: 100%;
  }
  .bubbles {
    margin: 20px 0;
    display: grid;
    grid-gap: 50px;
    max-width: 100%;
  }
  .bubbles div {
    box-sizing: border-box;
    position: relative;
    grid-column-start: 2;
    grid-column-end: 2;
  }
  .bubbles div:nth-child(1) {
    grid-column-start: 1;
    grid-column-end: 1;
    grid-row-start: 1;
    grid-row-end: 3;
  }
  .bubbles img {
    display: block;
    position: absolute;
    left: -45px;
    top: 20px;
  }
}

img.house {
  display: none;
}

/* ============ TEAM MEMBER GRID ================== */
.team-grid {
  display: flex;
  flex-wrap: wrap;
  margin-block-start: 0;
  padding-inline-start: 0;
}

.profile {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
  text-align: left;
  list-style-type: none;
  margin: 20px;
  min-width: 30%;
  width: 430px;
  min-height: 65px;
}

.profile h4,
.profile p {
  margin: 0;
}

.profile img {
  width: 4em;
  border-radius: 100%;
  margin-right: 30px;
}

/* =================== FORMS ====================== */

form label {
  font-size: 1.1rem;
  display: block;
  position: relative;
}

form input[type="text"],
form input[type="email"],
form textarea {
  display: block;
  padding: 0.5em 1em;
  border: 2px solid;
  margin: 0.5em 0 1em 0;
  font-size: 1em;
  width: 80%;
  max-width: 500px;
  font-family: "Cabin", sans-serif;
}

form fieldset {
  border: none;
  padding: 0;
  margin-bottom: 20px;
  display: flex;
}

fieldset legend {
  font-size: 1.2rem;
  margin: 0;
  padding: 0;
  padding-bottom: 5px;
}

fieldset label {
  margin-top: 5px;
}

button {
  font-family: "Cabin", sans-serif;
  font-size: 1em;
  border: none;
}

button:hover {
  background-color: #110077;
  box-shadow: 5px 5px #110077bb, 10px 10px #11007750;
  cursor: pointer;
}

:focus {
  box-shadow: 0 0 0 2px black, 0 0 0 4px white;
  outline: 2px solid black;
}

